# wikipedia-translations-extractor

./: .gitignore  README.md  execute_in_background.sh  extract_data.py  output.jsonl  pyproject.toml  setup.sh
